checkbox fix and disable Edit Delete

--- a/src/app/assistance-listing/assistance-listing-operations/sections/contact-information/contact-information.template.html
+++ b/src/app/assistance-listing/assistance-listing-operations/sections/contact-information/contact-information.template.html
@@ -33,10 +33,20 @@
           Phone: {{contact.phone}} <br/>
         </td>
         <td>
-          <a class="fal-table-edit" (click)="editContact(i)">Edit</a>
-          <i class="fa fa-pencil fal-table-edit" aria-hidden="true" (click)="editContact(i)"></i>
-          <a class="fal-table-delete" (click)="removeContact(i)">Delete</a>
-          <i class="fa fa-trash fal-table-delete" aria-hidden="true" (click)="removeContact(i)"></i>
+          <ng-container *ngIf="hideContactsForm">
+            <a class="fal-table-edit" (click)="editContact(i)" >Edit</a>
+            <i class="fa fa-pencil fal-table-edit" aria-hidden="true" (click)="editContact(i)"></i>
+            <a class="fal-table-delete" (click)="removeContact(i)">Delete</a>
+            <i class="fa fa-trash fal-table-delete" aria-hidden="true" (click)="removeContact(i)"></i>
+          </ng-container>
+
+          <ng-container *ngIf="!hideContactsForm">
+          <s class="fal-table-edit">Edit</s>
+          <s class="fa fa-pencil fal-table-edit" aria-hidden="true"></s>
+          <s class="fal-table-delete">Delete</s>
+          <s class="fa fa-trash fal-table-delete" aria-hidden="true"></s>
+          </ng-container>
+
         </td>
       </tr>
     </tbody>
