added the neccessary functionality, changed the styling and added unit tests

--- a/src/styles/pages/_wage-determination.scss
+++ b/src/styles/pages/_wage-determination.scss
@@ -2,15 +2,23 @@
   h1{
     margin-top: 50px !important;
   }
-  
+
   .usa-unstyled-list li{
     margin-bottom: 5px;
   }
-  
+
   .print-link{
     cursor: pointer;
   }
-  
+
+  h2 button{
+    margin: 0;
+    padding: 5px 10px;
+    font-size: 1.4rem;
+    vertical-align: middle;
+    margin-left: 10px;
+  }
+
   pre{
     background-color: #fff;
     border-radius: .25rem;
@@ -20,7 +28,7 @@
     border: 1px solid #E8E8E8;
     font-size: 1.4rem;
   }
-  
+
   /* MISC */
   /*============================*/
   samsidenav{
