--- a/src/app/wage-determination/wage-determination.page.html
+++ b/src/app/wage-determination/wage-determination.page.html
@@ -83,9 +83,11 @@
       </pre>
     </section>
 
-    <section [attr.id]="wdHistory" *ngIf="history">
-      <h2>History</h2>
-      <sam-history [data]="processedHistory" [currentId]="wageDetermination.fullReferenceNumber"></sam-history>
+    <section id="wd-history" *ngIf="history">
+      <h2>History
+        <samButton *ngIf="shortProcessedHistory" [buttonId]="'defaultBtnHistory'" [buttonText]="!showingLongHistory ? 'Show More' : 'Show Less'" [buttonType]="btnType" (click)="showHideLongHistory()"></samButton>
+      </h2>
+      <sam-history [data]="processedHistory" [currentId]="wageDetermination.fullReferenceNumber + '/' + wageDetermination.revisionNumber"></sam-history>
     </section>
 
   </div>
