[SAM-7148] Adjust maxwidth to account for error message padding

--- a/src/app/assistance-listing/components/account-identification.template.html
+++ b/src/app/assistance-listing/components/account-identification.template.html
@@ -55,7 +55,7 @@
             <samText [name]="'code-box-' + i"
                      [maxlength]="length"
                      [style.display]="'inline-block'"
-                     [style.maxWidth]=".9*length + 2.55 + 'rem'"
+                     [style.maxWidth]="0.9*length + 2.8 + 'rem'"
                      [formControlName]="'codeBox' + i"
             ></samText>
             {{isLast ? '' : '-'}}
