- More refacturing of IAM API Wrapper - Implemented session storage cache into cookie with 15 mins expiration. - Hooked up all requests and processed responses as directed by backend API

--- a/src/app/authentication/system/password/system-password.component.html
+++ b/src/app/authentication/system/password/system-password.component.html
@@ -4,14 +4,14 @@
     <div #formControl>
       <sam-password [currentPassword]="passwordForm.controls.currentPassword"
                     [password]="passwordForm.controls.newPassword"
-                    [phrases]="[user.firstName, user.initials, user.lastName, user.email, user.fullName]"
+                    [phrases]="[system.email]"
                     #password></sam-password>
       <div class="usa-button-controls">
         <button type="submit" [disabled]="states.loading">Submit</button>
       </div>
     </div>
     <samAlert [type]="states.alert.type"
-              [title]="states.alert.title"
+              [title]="states.alert.message"
               [hidden]="!states.alert.show"
               [target]="formControl"
               [offset]="{ left: 40, top: -30 }"
