--- a/src/styles/components/_authentication.scss
+++ b/src/styles/components/_authentication.scss
@@ -1,6 +1,7 @@
 @import 'authentication/shared/kba';
 @import 'authentication/shared/password';
 
+@import 'authentication/login';
 @import 'authentication/forgot';
 @import 'authentication/register';
 @import 'authentication/profile';
