UI changes as requested bu Kat SAM-3624

--- a/src/app/search/search.template.html
+++ b/src/app/search/search.template.html
@@ -149,7 +149,7 @@
         </sam-collapsible>
 
         <!--Awards specific Filters-->
-        <sam-collapsible [label]="'Award - IDV Type'" [startOpened]="true" *ngIf="index==='fpds'">
+        <sam-collapsible [label]="'Contract Type'" [startOpened]="true" *ngIf="index==='fpds'">
           <samRadioButton
             [(model)]="awardIDVModel"
             [options]="awardIDVRadConfig.options"
