[SAM-7148] Disable most buttons when any form is open

--- a/src/app/assistance-listing/assistance-listing-operations/sections/financial-info/other/financial-info-other.page.html
+++ b/src/app/assistance-listing/assistance-listing-operations/sections/financial-info/other/financial-info-other.page.html
@@ -21,8 +21,8 @@
 
   <div>
     <div class="pull-left">
-      <samButton buttonText="Cancel" (onClick)="onCancelClick($event)"></samButton>
-      <samButton buttonText="Previous" (onClick)="onPreviousClick($event)"></samButton>
+      <samButton [buttonType]="(otherFinancialInfoGroup.valid ? 'default' : 'disabled')" buttonText="Cancel" (onClick)="onCancelClick($event)"></samButton>
+      <samButton [buttonType]="(otherFinancialInfoGroup.valid ? 'default' : 'disabled')" buttonText="Previous" (onClick)="onPreviousClick($event)"></samButton>
       <samButton [buttonType]="(otherFinancialInfoGroup.valid ? 'default' : 'disabled')" buttonText="Save and Exit" (onClick)="onSaveExitClick($event)"></samButton>
       <samButton [buttonType]="(otherFinancialInfoGroup.valid ? 'default' : 'disabled')" buttonText="Save and Continue" (onClick)="onSaveContinueClick($event)"></samButton>
     </div>
